--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- custom css file link  -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Complete Responsive Web Service Website Design Tutorial</title>
+  <title>♾️-Affiliates</title>
 </head>
 <body>
 
