change no 2 only html code change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- custom css file link  -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>♾️-Affiliates</title>
+  <title>Complete Responsive Web Service Website Design Tutorial</title>
 </head>
 <body>
 
@@ -83,7 +83,7 @@
 
   <div class="content">
     <h3>We build websites that build your busines</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea amet iure deserunt doloremque voluptate distinctio rerum! Quas sunt inventore illum facere minus voluptas fugit, magni quidem cumque! Animi, illo magni.</p>
+    <p>Our main emphasis is that, we make your idea patent and promote  your product on our website and help you to earn online. </p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
 
@@ -110,8 +110,8 @@
     <img src="images/img1.svg" alt="">
   </div>
   <div class="content">
-    <h3>website development</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>Amazon Product selling ideas, strategies and leads.</h3>
+    <p>We help you sell your product on Amazon and help you generate leads and also keep a track on that by giving you regurlar updates on it.</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
 
@@ -120,8 +120,8 @@
 <div class="row">
 
   <div class="content">
-    <h3>mobile freindly</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>Website-Providing</h3>
+    <p>We provide you with the website of your business and help you grow by promoting your website on our page.</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
   <div class="image">
@@ -137,8 +137,8 @@
     <img src="images/img3.svg" alt="">
   </div>
   <div class="content">
-    <h3>responsive design</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>Website has responsive design</h3>
+    <p>The main thing is that our website is superb respovsive and is great at every platforms i.e. android, apple, mac, windows, smart-watch</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
 
@@ -147,8 +147,8 @@
 <div class="row">
 
   <div class="content">
-    <h3>web hosting</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>Provide: web hosting</h3>
+    <p>You have to do nothing as per our website provides you with web hosting, monthly servicing and free maintainance and regular update.</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
   <div class="image">
@@ -164,8 +164,8 @@
     <img src="images/img5.svg" alt="">
   </div>
   <div class="content">
-    <h3>seo freindly</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>Website is seo freindly</h3>
+    <p>We, help you make your website rank in your individual region and help your bussiness grow.</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
 
@@ -174,8 +174,8 @@
 <div class="row">
 
   <div class="content">
-    <h3>graphic design</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
+    <h3>For individual Affiliates</h3>
+    <p>We help teach an individual that how he can be able to be a self-affilator by providing with some tutorials. Also proves that how people earn with it.</p>
     <a href="#"><button class="btn">read more</button></a>
   </div>
   <div class="image">
@@ -217,7 +217,7 @@
 <!-- Press -->
 
 <section id="press">
-  <img class="press-logo"src="images/techcrunch.png" alt="tc-logo">
+  <img class="press-logo"src="images/biz.jpg" alt="tc-logo">
   <img class="press-logo"src="images/tnw.png" alt="tnw-logo">
   <img class="press-logo"src="images/bizinsider.png" alt="biz-insider-logo">
   <img class="press-logo"src="images/mashable.png" alt="mashable-logo">
@@ -281,8 +281,8 @@
     <img src="images/pic1.jpg" alt="">
   </div>
   <div class="info">
-    <h3>someone's name</h3>
-    <span>web designer</span>
+    <h3>Miss. Lovely</h3>
+    <span>CSS Expert</span>
     <div class="icons">
       <a href="#" class="fab fa-facebook-f"></a>
       <a href="#" class="fab fa-twitter"></a>
@@ -296,8 +296,8 @@
     <img src="images/pic2.jpg" alt="">
   </div>
   <div class="info">
-    <h3>someone's name</h3>
-    <span>web designer</span>
+    <h3>Mr.Shubham</h3>
+    <span>Js Coder</span>
     <div class="icons">
       <a href="#" class="fab fa-facebook-f"></a>
       <a href="#" class="fab fa-twitter"></a>
@@ -311,8 +311,8 @@
     <img src="images/pic3.jpg" alt="">
   </div>
   <div class="info">
-    <h3>someone's name</h3>
-    <span>web designer</span>
+    <h3>Miss. Pia</h3>
+    <span>Aced HTML</span>
     <div class="icons">
       <a href="#" class="fab fa-facebook-f"></a>
       <a href="#" class="fab fa-twitter"></a>
@@ -344,18 +344,16 @@
   </div>
 
   <div class="form-container">
-    <form action="https://formsubmit.co/acroshubham12@email.com" method="POST">
+    <form>
    
       <div class="inputBox">
         <input type="text" placeholder="first name">
         <input type="text" placeholder="last name">
       </div>
-      <input type="hidden" name="_subject" value="New Email wooooooo!">
-      <input type="hidden" name="_next" value="thankyou.html">
-      <input type="email" placeholder="email">
+      <input type="email" name="email" placeholder="email" id="">
       <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
-      <input type="submit" value="send">
-
+      <input type="submit" value="submit">
+      <script></script>
     </form>
   </div>
 
@@ -393,7 +391,7 @@
   <div class="accordion">
     <div class="accordion-header">
       <span>+</span>
-      <h3>How To update website?</h3>
+      <h3>Is it worthy?</h3>
     </div>
     <div class="accordion-body">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi atque possimus ipsum quae error ullam reiciendis in iste maiores nulla. Impedit nam praesentium omnis cupiditate excepturi natus magnam sunt deleniti!</p>
@@ -413,7 +411,7 @@
   <div class="accordion">
     <div class="accordion-header">
       <span>+</span>
-      <h3>how long it takes to design?</h3>
+      <h3>how long it takes to make my products lead grow?</h3>
     </div>
     <div class="accordion-body">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi atque possimus ipsum quae error ullam reiciendis in iste maiores nulla. Impedit nam praesentium omnis cupiditate excepturi natus magnam sunt deleniti!</p>
@@ -423,7 +421,7 @@
   <div class="accordion">
     <div class="accordion-header">
       <span>+</span>
-      <h3>is it seo freindly?</h3>
+      <h3>is it leads and seo freindly?</h3>
     </div>
     <div class="accordion-body">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi atque possimus ipsum quae error ullam reiciendis in iste maiores nulla. Impedit nam praesentium omnis cupiditate excepturi natus magnam sunt deleniti!</p>
@@ -473,7 +471,7 @@
 
 
 
-
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 
 <!-- jquery file link  -->
